@@ -1,3 +1,5 @@
+2006/3/16 -- released version 20060316_trunk
+
 2006/3/15 -- released version 20060315_trunk
 
 2006/3/14 -- released version 20060314_trunk
